Post Built Events Updated

--- a/Application/SAM Core Mollier/SAM Core Mollier.csproj
+++ b/Application/SAM Core Mollier/SAM Core Mollier.csproj
@@ -114,6 +114,12 @@
   </PropertyGroup>
   <PropertyGroup>
     <PostBuildEvent>set SAM_DIR=$(APPDATA)\SAM\
-if not exist "%25SAM_DIR%25" mkdir "%25SAM_DIR%25"</PostBuildEvent>
+if not exist "%25SAM_DIR%25" mkdir "%25SAM_DIR%25"
+
+xcopy "$(SolutionDir)\files\resources" "$(APPDATA)\SAM\resources" /Y/I/E/S
+xcopy "$(SolutionDir)\files\resources" "$(USERPROFILE)\Documents\SAM\resources" /Y/D/I/E/S
+
+copy "$(TargetDir)*.dll" "%25SAM_DIR%25"
+copy "$(TargetDir)*.exe" "%25SAM_DIR%25"</PostBuildEvent>
   </PropertyGroup>
 </Project>
