Bug Fix for UI WPF Built

--- a/Application/SAM Core Mollier/SAM Core Mollier.csproj
+++ b/Application/SAM Core Mollier/SAM Core Mollier.csproj
@@ -120,6 +120,7 @@ xcopy "$(SolutionDir)\files\resources" "$(APPDATA)\SAM\resources" /Y/I/E/S
 xcopy "$(SolutionDir)\files\resources" "$(USERPROFILE)\Documents\SAM\resources" /Y/D/I/E/S
 
 copy "$(TargetDir)*.dll" "%25SAM_DIR%25"
-copy "$(TargetDir)*.exe" "%25SAM_DIR%25"</PostBuildEvent>
+copy "$(TargetDir)*.exe" "%25SAM_DIR%25"
+copy "$(TargetDir)*.config" "%25SAM_DIR%25"</PostBuildEvent>
   </PropertyGroup>
 </Project>
