--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -82,6 +82,7 @@
       <DependentUpon>AnalyticalModelControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Modify\EditLegend.cs" />
+    <Compile Include="Modify\SetActiveGuid.cs" />
     <Compile Include="Modify\RemoveViewSettings.cs" />
     <Compile Include="Modify\EditViewSettings.cs" />
     <Compile Include="Modify\EditZones.cs" />
