--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Interfaces\IAnalyticalViewSettings.cs" />
     <Compile Include="Interfaces\ISection3DObject.cs" />
     <Compile Include="Query\Editable.cs" />
+    <Compile Include="Query\UndefinedLegendItem.cs" />
     <Compile Include="Query\LegendName.cs" />
     <Compile Include="Query\LegendItemDictionary.cs" />
     <Compile Include="Query\TryGetValue.cs" />
