--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Controls\AnalyticalModelControl.xaml.cs">
       <DependentUpon>AnalyticalModelControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Modify\RemoveSpaceZone.cs" />
     <Compile Include="Modify\EditSpaceZone.cs" />
     <Compile Include="Modify\DuplicateViewSettings.cs" />
     <Compile Include="Windows\ElevationControl.xaml.cs">
