--- a/WPF/SAM.Geometry.UI.WPF/SAM.Geometry.UI.WPF.csproj
+++ b/WPF/SAM.Geometry.UI.WPF/SAM.Geometry.UI.WPF.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Classes\Action\SelectAction.cs" />
     <Compile Include="Classes\Action\HighlightAction.cs" />
     <Compile Include="Classes\Action\Visual3DsAction.cs" />
+    <Compile Include="Classes\RectangularSelector.cs" />
     <Compile Include="Classes\UIGeometryObjectModel.cs" />
     <Page Include="Controls\ViewportControl.xaml">
       <SubType>Designer</SubType>
@@ -92,6 +93,7 @@
     <Compile Include="Delegates\ObjectDoubleClickedEventHandler.cs" />
     <Compile Include="Delegates\ObjectContextMenuOpeningEventHandler.cs" />
     <Compile Include="Delegates\ObjectHooveredEventHandler.cs" />
+    <Compile Include="Enums\Mode.cs" />
     <Compile Include="Interfaces\IAction.cs" />
     <Compile Include="Modify\Opacity.cs" />
     <Compile Include="Modify\Select.cs" />
