Zoom Analytical SAMObject Implemented

--- a/WPF/SAM.Core.UI.WPF/SAM.Core.UI.WPF.csproj
+++ b/WPF/SAM.Core.UI.WPF/SAM.Core.UI.WPF.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Controls\LegendControl.xaml.cs">
       <DependentUpon>LegendControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Query\Visual3D.cs" />
     <Compile Include="Windows\LegendWindow.xaml.cs">
       <DependentUpon>LegendWindow.xaml</DependentUpon>
     </Compile>
