--- a/WPF/SAM.Geometry.UI.WPF/SAM.Geometry.UI.WPF.csproj
+++ b/WPF/SAM.Geometry.UI.WPF/SAM.Geometry.UI.WPF.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Classes\Action\HighlightAction.cs" />
     <Compile Include="Classes\Action\Visual3DsAction.cs" />
     <Compile Include="Classes\RectangularSelector.cs" />
+    <Compile Include="Classes\ZoomRequestedEventArgs.cs" />
     <Compile Include="Classes\UIGeometryObjectModel.cs" />
     <Page Include="Controls\ViewportControl.xaml">
       <SubType>Designer</SubType>
@@ -92,6 +93,7 @@
     <Compile Include="Create\Point3DCollection.cs" />
     <Compile Include="Delegates\ObjectDoubleClickedEventHandler.cs" />
     <Compile Include="Delegates\ObjectContextMenuOpeningEventHandler.cs" />
+    <Compile Include="Delegates\ZoomRequestedEventHandler.cs" />
     <Compile Include="Delegates\ObjectHooveredEventHandler.cs" />
     <Compile Include="Enums\Mode.cs" />
     <Compile Include="Interfaces\IAction.cs" />
