ViewSettings Group Implemented

--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -127,6 +127,7 @@
     </Compile>
     <Compile Include="Interfaces\IAnalyticalViewSettings.cs" />
     <Compile Include="Interfaces\ISection3DObject.cs" />
+    <Compile Include="Query\ViewSettings.cs" />
     <Compile Include="Query\Editable.cs" />
     <Compile Include="Query\UndefinedLegendItem.cs" />
     <Compile Include="Query\LegendName.cs" />
