Drag&Drop Implemented

--- a/WPF/SAM.Geometry.UI.WPF/SAM.Geometry.UI.WPF.csproj
+++ b/WPF/SAM.Geometry.UI.WPF/SAM.Geometry.UI.WPF.csproj
@@ -67,8 +67,10 @@
     <Compile Include="Classes\Action\HighlightAction.cs" />
     <Compile Include="Classes\Action\Visual3DsAction.cs" />
     <Compile Include="Classes\RectangularSelector.cs" />
-    <Compile Include="Classes\SelectionRequestedEventArgs.cs" />
-    <Compile Include="Classes\ZoomRequestedEventArgs.cs" />
+    <Compile Include="Classes\EventArgs\SelectionRequestedEventArgs.cs" />
+    <Compile Include="Classes\DragDropManager.cs" />
+    <Compile Include="Classes\EventArgs\TreeViewItemDroppedEventArgs.cs" />
+    <Compile Include="Classes\EventArgs\ZoomRequestedEventArgs.cs" />
     <Compile Include="Classes\UIGeometryObjectModel.cs" />
     <Page Include="Controls\ViewportControl.xaml">
       <SubType>Designer</SubType>
@@ -95,9 +97,11 @@
     <Compile Include="Delegates\ObjectDoubleClickedEventHandler.cs" />
     <Compile Include="Delegates\ObjectContextMenuOpeningEventHandler.cs" />
     <Compile Include="Delegates\SelectionRequestedEventHandler.cs" />
+    <Compile Include="Delegates\TreeViewItemDroppedEventHandler.cs" />
     <Compile Include="Delegates\ZoomRequestedEventHandler.cs" />
     <Compile Include="Delegates\ObjectHooveredEventHandler.cs" />
-    <Compile Include="Enums\Mode.cs" />
+    <Compile Include="Enums\EventResult.cs" />
+    <Compile Include="Enums\RectangularSelectorMode.cs" />
     <Compile Include="Interfaces\IAction.cs" />
     <Compile Include="Modify\Opacity.cs" />
     <Compile Include="Modify\Select.cs" />
