--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -76,6 +76,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Modify\AssignSpaceInternalCondition.cs" />
+    <Compile Include="Modify\AssignSpaceZone.cs" />
+    <Compile Include="Modify\SetGroup.cs" />
     <Compile Include="Query\DefaultGroup.cs" />
     <Compile Include="Windows\BatchCreateViewsWindow.xaml.cs">
       <DependentUpon>BatchCreateViewsWindow.xaml</DependentUpon>
