--- a/WPF/SAM.Geometry.UI.WPF/SAM.Geometry.UI.WPF.csproj
+++ b/WPF/SAM.Geometry.UI.WPF/SAM.Geometry.UI.WPF.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Classes\Action\SelectAction.cs" />
     <Compile Include="Classes\Action\HighlightAction.cs" />
     <Compile Include="Classes\Action\Visual3DsAction.cs" />
+    <Compile Include="Classes\EventArgs\TreeViewItemHighlightedEventArgs.cs" />
     <Compile Include="Classes\RectangularSelector.cs" />
     <Compile Include="Classes\EventArgs\SelectionRequestedEventArgs.cs" />
     <Compile Include="Classes\TreeViewHighlightManager.cs" />
@@ -98,6 +99,7 @@
     <Compile Include="Delegates\ObjectDoubleClickedEventHandler.cs" />
     <Compile Include="Delegates\ObjectContextMenuOpeningEventHandler.cs" />
     <Compile Include="Delegates\SelectionRequestedEventHandler.cs" />
+    <Compile Include="Delegates\TreeViewItemHighlightedEventHandler.cs" />
     <Compile Include="Delegates\TreeViewItemDroppedEventHandler.cs" />
     <Compile Include="Delegates\ZoomRequestedEventHandler.cs" />
     <Compile Include="Delegates\ObjectHooveredEventHandler.cs" />
