Dragging Highlights Initial Implementation

--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -76,6 +76,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Modify\AllowTreeViewItemByType.cs" />
     <Compile Include="Modify\AssignSpaceInternalCondition.cs" />
     <Compile Include="Modify\AssignSpaceZone.cs" />
     <Compile Include="Modify\SetGroup.cs" />
