--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -76,6 +76,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\ZonesSpacesControl.xaml.cs">
+      <DependentUpon>ZonesSpacesControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Modify\AllowTreeViewItemByType.cs" />
     <Compile Include="Modify\AssignSpaceInternalCondition.cs" />
     <Compile Include="Modify\AssignSpaceZone.cs" />
@@ -280,6 +283,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Controls\ZonesSpacesControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Windows\BatchCreateViewsWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
