--- a/SAM_UI/SAM.Core.UI/SAM.Core.UI.csproj
+++ b/SAM_UI/SAM.Core.UI/SAM.Core.UI.csproj
@@ -48,17 +48,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\EventArgs\ClosedEventArgs.cs" />
+    <Compile Include="Classes\EventArgs\OpenedEventArgs.cs" />
     <Compile Include="Classes\Legend.cs" />
     <Compile Include="Classes\LegendItem.cs" />
+    <Compile Include="Classes\Modification\FullModification.cs" />
+    <Compile Include="Classes\Modification\Modification.cs" />
+    <Compile Include="Classes\EventArgs\ModifiedEventArgs.cs" />
     <Compile Include="Classes\UIJSAMObject.cs" />
     <Compile Include="Convert\ToDrawing\Color.cs" />
     <Compile Include="Convert\ToMedia\Color.cs" />
+    <Compile Include="Delegates\ClosedEventHandler.cs" />
+    <Compile Include="Delegates\OpenedEventHandler.cs" />
+    <Compile Include="Delegates\ModifiedEventHandler.cs" />
     <Compile Include="Forms\WelcomeForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\WelcomeForm.designer.cs">
       <DependentUpon>WelcomeForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\IModification.cs" />
     <Compile Include="Interfaces\IUISettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
