--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -128,6 +128,8 @@
     </Compile>
     <Compile Include="Interfaces\IAnalyticalViewSettings.cs" />
     <Compile Include="Interfaces\ISection3DObject.cs" />
+    <Compile Include="Query\Guids.cs" />
+    <Compile Include="Query\IJSAMObject.cs" />
     <Compile Include="Query\ViewSettings.cs" />
     <Compile Include="Query\Editable.cs" />
     <Compile Include="Query\UndefinedLegendItem.cs" />
